fixed the problem with horizontal scrolling

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,6 +16,7 @@
 body {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
